# KVMemory

./: .deepspeed_env  .gitignore  README.md  baseline_attn_trainer.py  baseline_qa_trainer.py  baseline_trainer.py  bias_tulu_qa_attn_trainer copy.py  blk_qa_trainer.py  blkattn_trainer.py  block_attn_trainer.py  cacheblend.py  check.py  compare.py  compress_attn_trainer.py  compress_qa_trainer.py  data.py  dialog.py  dialog_baseline.py  finetune.py  finetune_baseline.py  finetune_bias.py  finetune_combine.py  finetune_encap.py  finetune_interleave.py  finetune_mix5.py  finetune_mix5_batch.py  finetune_reencode.py  finetune_special.py  fsdp.yaml  hostfile  hqa.sh  id2token.py  ifeval.py  ifeval_baseline.py  inference.py  loss.py  loss_inference.py  musique.sh  nq.py  nq.sh  (+35 more)
configs/: fsdp.yaml
draw/: draw_nq.py
launch_script/: convert.sh  eval.sh  run.sh  scheduler.sh
result/: MSCJudge_KV_20240926-060210.json  MSCJudge_baseline_20240926-222245.json  MSCJudge_cheat_20240928-022328.json  baseline_0_20240820-083948.json  baseline_4_20240820-084449.json  baseline_9_20240820-081412.json  ifeval_20240821-055154.jsonl  ifeval_baseline_20240821-061020.jsonl  ifeval_combinemodel2_20241003-093756.jsonl  ifeval_combinemodel30000_20241006-232102.jsonl  ifeval_combinemodel_20240925-235953.jsonl  ifeval_special_20241009-092708.jsonl  openwebtext_2000_fixsize_20240820-235756.json  openwebtext_2000_paragraph_20240820-162837.json  openwebtext_2000_paragraph_20240820-195219.json  openwebtext_2000_paragraph_20240820-231247.json  openwebtext_20240820-125659.json  (+17 more)
src/: common.py
(+885 files in other folders)
